// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShieldPage /> renders with registration disabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <Connect(LoginModal) />
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "default": Object {
          "fragment": Object {
            "abstractKey": null,
            "argumentDefinitions": Array [],
            "kind": "Fragment",
            "metadata": null,
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "args": null,
                "kind": "FragmentSpread",
                "name": "RegistrationModal_query",
              },
            ],
            "type": "Query",
          },
          "hash": "bc85cb6f70fd899b70a2cbcfcd4ebbb6",
          "kind": "Request",
          "operation": Object {
            "argumentDefinitions": Array [],
            "kind": "Operation",
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "alias": null,
                "args": null,
                "kind": "ScalarField",
                "name": "registrationScript",
                "storageKey": null,
              },
              Object {
                "alias": null,
                "args": null,
                "concreteType": "RegistrationForm",
                "kind": "LinkedField",
                "name": "registrationForm",
                "plural": false,
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "concreteType": null,
                    "kind": "LinkedField",
                    "name": "questions",
                    "plural": true,
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "__typename",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "id",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "type",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": "__isQuestion",
                        "kind": "TypeDiscriminator",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "title",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "number",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "private",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "position",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "required",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "helpText",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "hidden",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "level",
                            "storageKey": null,
                          },
                        ],
                        "type": "SectionQuestion",
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isRangeBetween",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMin",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMax",
                            "storageKey": null,
                          },
                        ],
                        "type": "SimpleQuestion",
                      },
                      Object {
                        "alias": null,
                        "args": Array [
                          Object {
                            "kind": "Literal",
                            "name": "orderBy",
                            "value": Object {
                              "direction": "ASC",
                              "field": "POSITION",
                            },
                          },
                        ],
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "jumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "destination",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                            "kind": "LinkedField",
                            "name": "conditions",
                            "plural": true,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "operator",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": null,
                                "kind": "LinkedField",
                                "name": "question",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "__typename",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "type",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoice",
                                "kind": "LinkedField",
                                "name": "value",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "destinationJumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "alwaysJumpDestinationQuestion",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "number",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "description",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isOtherAllowed",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "randomQuestionChoices",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "groupedResponsesEnabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "responseColorsDisabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionValidationRule",
                            "kind": "LinkedField",
                            "name": "validationRule",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "type",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": Array [
                              Object {
                                "kind": "Literal",
                                "name": "allowRandomize",
                                "value": true,
                              },
                            ],
                            "concreteType": "QuestionChoiceConnection",
                            "kind": "LinkedField",
                            "name": "choices",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "PageInfo",
                                "kind": "LinkedField",
                                "name": "pageInfo",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "hasNextPage",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "totalCount",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoiceEdge",
                                "kind": "LinkedField",
                                "name": "edges",
                                "plural": true,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "QuestionChoice",
                                    "kind": "LinkedField",
                                    "name": "node",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "id",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "title",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "description",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "color",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "concreteType": "Media",
                                        "kind": "LinkedField",
                                        "name": "image",
                                        "plural": false,
                                        "selections": Array [
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "id",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "url",
                                            "storageKey": null,
                                          },
                                        ],
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": "choices(allowRandomize:true)",
                          },
                        ],
                        "type": "MultipleChoiceQuestion",
                      },
                    ],
                    "storageKey": null,
                  },
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "id",
                    "storageKey": null,
                  },
                ],
                "storageKey": null,
              },
            ],
          },
          "params": Object {
            "cacheID": "bdeb57630c030380714dd0dd5cbe05cd",
            "id": null,
            "metadata": Object {},
            "name": "ShieldPageQuery",
            "operationKind": "query",
            "text": "query ShieldPageQuery {
  ...RegistrationModal_query
}

fragment ModalRegistrationFormQuestions_registrationForm on RegistrationForm {
  questions {
    __typename
    __isQuestion: __typename
    id
    title
    number
    private
    position
    required
    helpText
    hidden
    ... on SectionQuestion {
      level
    }
    ... on SimpleQuestion {
      isRangeBetween
      rangeMin
      rangeMax
    }
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    destinationJumps {
      id
      origin {
        __typename
        id
        title
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      groupedResponsesEnabled
      responseColorsDisabled
      validationRule {
        type
        number
      }
      choices(allowRandomize: true) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}

fragment RegistrationForm_query on Query {
  registrationScript
  registrationForm {
    questions {
      __typename
      id
      type
      __isQuestion: __typename
      title
      number
      private
      position
      required
      helpText
      hidden
      ... on SectionQuestion {
        level
      }
      ... on SimpleQuestion {
        isRangeBetween
        rangeMin
        rangeMax
      }
      jumps(orderBy: {field: POSITION, direction: ASC}) {
        id
        origin {
          __typename
          id
        }
        destination {
          __typename
          id
          title
          number
        }
        conditions {
          id
          operator
          question {
            __typename
            id
            title
            type
          }
          value {
            id
            title
          }
        }
      }
      destinationJumps {
        id
        origin {
          __typename
          id
          title
        }
      }
      alwaysJumpDestinationQuestion {
        __typename
        id
        title
        number
      }
      description
      ... on MultipleChoiceQuestion {
        isOtherAllowed
        randomQuestionChoices
        groupedResponsesEnabled
        responseColorsDisabled
        validationRule {
          type
          number
        }
        choices(allowRandomize: true) {
          pageInfo {
            hasNextPage
          }
          totalCount
          edges {
            node {
              id
              title
              description
              color
              image {
                id
                url
              }
            }
          }
        }
      }
    }
    ...ModalRegistrationFormQuestions_registrationForm
    id
  }
}

fragment RegistrationModal_query on Query {
  ...RegistrationForm_query
}
",
          },
        },
      }
    }
    render={[Function]}
    variables={Object {}}
  />
  <div
    className="panel-body"
  >
    <form
      id="login-form"
      onSubmit={[MockFunction]}
    >
      <Connect(LoginBox)
        prefix=""
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="mt-10 btn-block btn-success"
        disabled={false}
        id="confirm-login"
        type="submit"
      >
        <FormattedMessage
          id="global.login_me"
          values={Object {}}
        />
      </Button>
    </form>
  </div>
</div>
`;

exports[`<ShieldPage /> renders with registration disabled and classical auth by pass enabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <Connect(LoginModal) />
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "default": Object {
          "fragment": Object {
            "abstractKey": null,
            "argumentDefinitions": Array [],
            "kind": "Fragment",
            "metadata": null,
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "args": null,
                "kind": "FragmentSpread",
                "name": "RegistrationModal_query",
              },
            ],
            "type": "Query",
          },
          "hash": "bc85cb6f70fd899b70a2cbcfcd4ebbb6",
          "kind": "Request",
          "operation": Object {
            "argumentDefinitions": Array [],
            "kind": "Operation",
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "alias": null,
                "args": null,
                "kind": "ScalarField",
                "name": "registrationScript",
                "storageKey": null,
              },
              Object {
                "alias": null,
                "args": null,
                "concreteType": "RegistrationForm",
                "kind": "LinkedField",
                "name": "registrationForm",
                "plural": false,
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "concreteType": null,
                    "kind": "LinkedField",
                    "name": "questions",
                    "plural": true,
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "__typename",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "id",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "type",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": "__isQuestion",
                        "kind": "TypeDiscriminator",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "title",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "number",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "private",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "position",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "required",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "helpText",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "hidden",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "level",
                            "storageKey": null,
                          },
                        ],
                        "type": "SectionQuestion",
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isRangeBetween",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMin",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMax",
                            "storageKey": null,
                          },
                        ],
                        "type": "SimpleQuestion",
                      },
                      Object {
                        "alias": null,
                        "args": Array [
                          Object {
                            "kind": "Literal",
                            "name": "orderBy",
                            "value": Object {
                              "direction": "ASC",
                              "field": "POSITION",
                            },
                          },
                        ],
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "jumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "destination",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                            "kind": "LinkedField",
                            "name": "conditions",
                            "plural": true,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "operator",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": null,
                                "kind": "LinkedField",
                                "name": "question",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "__typename",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "type",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoice",
                                "kind": "LinkedField",
                                "name": "value",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "destinationJumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "alwaysJumpDestinationQuestion",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "number",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "description",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isOtherAllowed",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "randomQuestionChoices",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "groupedResponsesEnabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "responseColorsDisabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionValidationRule",
                            "kind": "LinkedField",
                            "name": "validationRule",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "type",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": Array [
                              Object {
                                "kind": "Literal",
                                "name": "allowRandomize",
                                "value": true,
                              },
                            ],
                            "concreteType": "QuestionChoiceConnection",
                            "kind": "LinkedField",
                            "name": "choices",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "PageInfo",
                                "kind": "LinkedField",
                                "name": "pageInfo",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "hasNextPage",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "totalCount",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoiceEdge",
                                "kind": "LinkedField",
                                "name": "edges",
                                "plural": true,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "QuestionChoice",
                                    "kind": "LinkedField",
                                    "name": "node",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "id",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "title",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "description",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "color",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "concreteType": "Media",
                                        "kind": "LinkedField",
                                        "name": "image",
                                        "plural": false,
                                        "selections": Array [
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "id",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "url",
                                            "storageKey": null,
                                          },
                                        ],
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": "choices(allowRandomize:true)",
                          },
                        ],
                        "type": "MultipleChoiceQuestion",
                      },
                    ],
                    "storageKey": null,
                  },
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "id",
                    "storageKey": null,
                  },
                ],
                "storageKey": null,
              },
            ],
          },
          "params": Object {
            "cacheID": "bdeb57630c030380714dd0dd5cbe05cd",
            "id": null,
            "metadata": Object {},
            "name": "ShieldPageQuery",
            "operationKind": "query",
            "text": "query ShieldPageQuery {
  ...RegistrationModal_query
}

fragment ModalRegistrationFormQuestions_registrationForm on RegistrationForm {
  questions {
    __typename
    __isQuestion: __typename
    id
    title
    number
    private
    position
    required
    helpText
    hidden
    ... on SectionQuestion {
      level
    }
    ... on SimpleQuestion {
      isRangeBetween
      rangeMin
      rangeMax
    }
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    destinationJumps {
      id
      origin {
        __typename
        id
        title
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      groupedResponsesEnabled
      responseColorsDisabled
      validationRule {
        type
        number
      }
      choices(allowRandomize: true) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}

fragment RegistrationForm_query on Query {
  registrationScript
  registrationForm {
    questions {
      __typename
      id
      type
      __isQuestion: __typename
      title
      number
      private
      position
      required
      helpText
      hidden
      ... on SectionQuestion {
        level
      }
      ... on SimpleQuestion {
        isRangeBetween
        rangeMin
        rangeMax
      }
      jumps(orderBy: {field: POSITION, direction: ASC}) {
        id
        origin {
          __typename
          id
        }
        destination {
          __typename
          id
          title
          number
        }
        conditions {
          id
          operator
          question {
            __typename
            id
            title
            type
          }
          value {
            id
            title
          }
        }
      }
      destinationJumps {
        id
        origin {
          __typename
          id
          title
        }
      }
      alwaysJumpDestinationQuestion {
        __typename
        id
        title
        number
      }
      description
      ... on MultipleChoiceQuestion {
        isOtherAllowed
        randomQuestionChoices
        groupedResponsesEnabled
        responseColorsDisabled
        validationRule {
          type
          number
        }
        choices(allowRandomize: true) {
          pageInfo {
            hasNextPage
          }
          totalCount
          edges {
            node {
              id
              title
              description
              color
              image {
                id
                url
              }
            }
          }
        }
      }
    }
    ...ModalRegistrationFormQuestions_registrationForm
    id
  }
}

fragment RegistrationModal_query on Query {
  ...RegistrationForm_query
}
",
          },
        },
      }
    }
    render={[Function]}
    variables={Object {}}
  />
  <div
    className="panel-body"
  >
    <Connect(LoginBox)
      prefix=""
    />
  </div>
</div>
`;

exports[`<ShieldPage /> renders with registration enabled 1`] = `
<div
  className="bg-white col-md-4 col-md-offset-4 panel panel-default"
  id="shield-agent"
>
  <Connect(LoginModal) />
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "default": Object {
          "fragment": Object {
            "abstractKey": null,
            "argumentDefinitions": Array [],
            "kind": "Fragment",
            "metadata": null,
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "args": null,
                "kind": "FragmentSpread",
                "name": "RegistrationModal_query",
              },
            ],
            "type": "Query",
          },
          "hash": "bc85cb6f70fd899b70a2cbcfcd4ebbb6",
          "kind": "Request",
          "operation": Object {
            "argumentDefinitions": Array [],
            "kind": "Operation",
            "name": "ShieldPageQuery",
            "selections": Array [
              Object {
                "alias": null,
                "args": null,
                "kind": "ScalarField",
                "name": "registrationScript",
                "storageKey": null,
              },
              Object {
                "alias": null,
                "args": null,
                "concreteType": "RegistrationForm",
                "kind": "LinkedField",
                "name": "registrationForm",
                "plural": false,
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "concreteType": null,
                    "kind": "LinkedField",
                    "name": "questions",
                    "plural": true,
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "__typename",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "id",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "type",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": "__isQuestion",
                        "kind": "TypeDiscriminator",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "title",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "number",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "private",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "position",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "required",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "helpText",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "hidden",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "level",
                            "storageKey": null,
                          },
                        ],
                        "type": "SectionQuestion",
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isRangeBetween",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMin",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "rangeMax",
                            "storageKey": null,
                          },
                        ],
                        "type": "SimpleQuestion",
                      },
                      Object {
                        "alias": null,
                        "args": Array [
                          Object {
                            "kind": "Literal",
                            "name": "orderBy",
                            "value": Object {
                              "direction": "ASC",
                              "field": "POSITION",
                            },
                          },
                        ],
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "jumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "destination",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionLogicJumpCondition",
                            "kind": "LinkedField",
                            "name": "conditions",
                            "plural": true,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "operator",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": null,
                                "kind": "LinkedField",
                                "name": "question",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "__typename",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "type",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoice",
                                "kind": "LinkedField",
                                "name": "value",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "id",
                                    "storageKey": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "title",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": "jumps(orderBy:{\\"direction\\":\\"ASC\\",\\"field\\":\\"POSITION\\"})",
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "LogicJump",
                        "kind": "LinkedField",
                        "name": "destinationJumps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": null,
                            "kind": "LinkedField",
                            "name": "origin",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "__typename",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "id",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "title",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "alwaysJumpDestinationQuestion",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "number",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "description",
                        "storageKey": null,
                      },
                      Object {
                        "abstractKey": null,
                        "kind": "InlineFragment",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "isOtherAllowed",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "randomQuestionChoices",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "groupedResponsesEnabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "responseColorsDisabled",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "concreteType": "MultipleChoiceQuestionValidationRule",
                            "kind": "LinkedField",
                            "name": "validationRule",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "type",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "number",
                                "storageKey": null,
                              },
                            ],
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": Array [
                              Object {
                                "kind": "Literal",
                                "name": "allowRandomize",
                                "value": true,
                              },
                            ],
                            "concreteType": "QuestionChoiceConnection",
                            "kind": "LinkedField",
                            "name": "choices",
                            "plural": false,
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "PageInfo",
                                "kind": "LinkedField",
                                "name": "pageInfo",
                                "plural": false,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "kind": "ScalarField",
                                    "name": "hasNextPage",
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "totalCount",
                                "storageKey": null,
                              },
                              Object {
                                "alias": null,
                                "args": null,
                                "concreteType": "QuestionChoiceEdge",
                                "kind": "LinkedField",
                                "name": "edges",
                                "plural": true,
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "args": null,
                                    "concreteType": "QuestionChoice",
                                    "kind": "LinkedField",
                                    "name": "node",
                                    "plural": false,
                                    "selections": Array [
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "id",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "title",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "description",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "kind": "ScalarField",
                                        "name": "color",
                                        "storageKey": null,
                                      },
                                      Object {
                                        "alias": null,
                                        "args": null,
                                        "concreteType": "Media",
                                        "kind": "LinkedField",
                                        "name": "image",
                                        "plural": false,
                                        "selections": Array [
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "id",
                                            "storageKey": null,
                                          },
                                          Object {
                                            "alias": null,
                                            "args": null,
                                            "kind": "ScalarField",
                                            "name": "url",
                                            "storageKey": null,
                                          },
                                        ],
                                        "storageKey": null,
                                      },
                                    ],
                                    "storageKey": null,
                                  },
                                ],
                                "storageKey": null,
                              },
                            ],
                            "storageKey": "choices(allowRandomize:true)",
                          },
                        ],
                        "type": "MultipleChoiceQuestion",
                      },
                    ],
                    "storageKey": null,
                  },
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "id",
                    "storageKey": null,
                  },
                ],
                "storageKey": null,
              },
            ],
          },
          "params": Object {
            "cacheID": "bdeb57630c030380714dd0dd5cbe05cd",
            "id": null,
            "metadata": Object {},
            "name": "ShieldPageQuery",
            "operationKind": "query",
            "text": "query ShieldPageQuery {
  ...RegistrationModal_query
}

fragment ModalRegistrationFormQuestions_registrationForm on RegistrationForm {
  questions {
    __typename
    __isQuestion: __typename
    id
    title
    number
    private
    position
    required
    helpText
    hidden
    ... on SectionQuestion {
      level
    }
    ... on SimpleQuestion {
      isRangeBetween
      rangeMin
      rangeMax
    }
    jumps(orderBy: {field: POSITION, direction: ASC}) {
      id
      origin {
        __typename
        id
      }
      destination {
        __typename
        id
        title
        number
      }
      conditions {
        id
        operator
        question {
          __typename
          id
          title
          type
        }
        value {
          id
          title
        }
      }
    }
    destinationJumps {
      id
      origin {
        __typename
        id
        title
      }
    }
    alwaysJumpDestinationQuestion {
      __typename
      id
      title
      number
    }
    description
    type
    ... on MultipleChoiceQuestion {
      isOtherAllowed
      randomQuestionChoices
      groupedResponsesEnabled
      responseColorsDisabled
      validationRule {
        type
        number
      }
      choices(allowRandomize: true) {
        pageInfo {
          hasNextPage
        }
        totalCount
        edges {
          node {
            id
            title
            description
            color
            image {
              id
              url
            }
          }
        }
      }
    }
  }
}

fragment RegistrationForm_query on Query {
  registrationScript
  registrationForm {
    questions {
      __typename
      id
      type
      __isQuestion: __typename
      title
      number
      private
      position
      required
      helpText
      hidden
      ... on SectionQuestion {
        level
      }
      ... on SimpleQuestion {
        isRangeBetween
        rangeMin
        rangeMax
      }
      jumps(orderBy: {field: POSITION, direction: ASC}) {
        id
        origin {
          __typename
          id
        }
        destination {
          __typename
          id
          title
          number
        }
        conditions {
          id
          operator
          question {
            __typename
            id
            title
            type
          }
          value {
            id
            title
          }
        }
      }
      destinationJumps {
        id
        origin {
          __typename
          id
          title
        }
      }
      alwaysJumpDestinationQuestion {
        __typename
        id
        title
        number
      }
      description
      ... on MultipleChoiceQuestion {
        isOtherAllowed
        randomQuestionChoices
        groupedResponsesEnabled
        responseColorsDisabled
        validationRule {
          type
          number
        }
        choices(allowRandomize: true) {
          pageInfo {
            hasNextPage
          }
          totalCount
          edges {
            node {
              id
              title
              description
              color
              image {
                id
                url
              }
            }
          }
        }
      }
    }
    ...ModalRegistrationFormQuestions_registrationForm
    id
  }
}

fragment RegistrationModal_query on Query {
  ...RegistrationForm_query
}
",
          },
        },
      }
    }
    render={[Function]}
    variables={Object {}}
  />
  <div
    className="panel-body"
  >
    <Connect(LoginButton)
      className="btn--connection btn-block"
    />
    <div
      className="mt-10"
    />
    <Connect(injectIntl(RegistrationButton))
      className="btn-block"
    />
  </div>
</div>
`;
